# Investing

./: .gitignore  README.md  dividends.py  functions.py  pyproject.toml  sector_performance.py
.ipynb_checkpoints/: functions-checkpoint.py
auto-manufacturers/company-profiles/: f.ipynb  gm.ipynb
auto-manufacturers/company-profiles/.ipynb_checkpoints/: f-checkpoint.ipynb  gm-checkpoint.ipynb
examples/example_1/: dummy_option_trades.json  dummy_stock_trades.json  dummy_trades.json  example_1.py  option_trade_entry_example.py  stock_trade_entry_example.py  trade_entry_example.py
examples/example_2/: view_profits.py
examples/fetch_current_data/: dummy_stock_data.json  ex_fetch_current_price.py  fetch_current_price.py
examples/view_profit/: check_adjusted_buy_in.py  check_current_positions.py  check_original_buy_in.py  view_profit_by_symbol.py
src/data/data_model/: dividend_entry.py  option_entry.py  stock_entry.py  trade_entry.py
src/data/enum/: brokerage.py  option_type.py  security_type.py  sub_action.py  trade_action.py  trade_strategy.py
src/journal/core/: calc_portfolio_metrics.py  (+2 more)
src/trading_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: portfolio_gui.py
src/utilities/: fetch_market_data.py
tests/test_data_model/: test_dividend_entry.py  test_option_entry.py  test_stock_entry.py  test_trade_entry.py
tests/test_trade_journal/: test_calculate_profit.py
utilities/csv/: load_trades.py  view_profits.py
utilities/exports/: view_profits.py
utilities/imports/: fetch_market_data.py  load_trades.py
(+30 files in other folders)
