[project]
name = "trading_analytics"
version = "1.0.0.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic~=2.10.6",
    "pydantic-settings~=2.8.1.0"
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v --cov=src/trading_analytics --cov-report=html"